Revert "fixed end of community being cut off"
This reverts commit ef585d9711778195fe221c0b01d4e37a8b4dd7bc.

--- a/mods/website/web/css/website-base.css
+++ b/mods/website/web/css/website-base.css
@@ -4,6 +4,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
@@ -264,23 +265,18 @@ body {
     justify-content: space-around;
     align-items: center;
     height: 5rem;
-    transition: all ease-in-out 1s;
+    gap: 2rem;
   }
-
-  .splash-option button {
-    margin: 0 2rem;
-  }
-  
   .container>div label {
     width: 0;
     display: block;
     white-space: nowrap;
     overflow: hidden;
     text-align: left;
-    transition: all 1s ease-in-out;
+    transition: width 1s ease-in-out;
   }
   .container>div:hover label {
-    width: 220px;
+    width: 180px;
   }
 }
 
